--- a/bake.html
+++ b/bake.html
@@ -317,24 +317,20 @@
   <!-- Interactive sprinkle background -->
   <canvas id="sprinkles"></canvas>
 
-  <!-- Nav -->
-  <nav class="nav nav-simple">
-  <div class="container nav-inner">
-    <!-- Snoopy logo (left) -->
-    <a class="brand-logo" href="./" aria-label="Home">
-      <img src="Snoopy_Welcome.png" alt="Snoopy waving hi" />
-    </a>
-
-    <!-- Centered links (no pills) -->
-    <div class="nav-links nav-center">
-      <a href="work.html">Projects</a>
-      <a href="races.html">Races</a>
-      <a href="bake.html">Bake</a>
-      <a href="travel.html">Travel</a>
-      <a href="#contact">Contact</a>
+  <nav class="nav">
+    <div class="container nav-inner">
+      <a class="brand-logo" href="./" aria-label="Home">
+        <img src="Snoopy_Welcome.png" alt="Snoopy waving hi" />
+      </a>
+      <div class="nav-links">
+        <a href="work.html">Projects</a>
+        <a href="races.html">Races</a>
+        <a href="bake.html">Bake</a>
+        <a href="travel.html">Travel</a>
+        <a href="#contact">Contact</a>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
 
   <main class="container work">
