--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
   <link href="styles.css" rel="stylesheet" />
 </head>
 <body class="oscar-bg">
-  <nav class="nav nav-simple">
+  <!-- Unified Navbar -->
+  <nav class="nav">
     <div class="container nav-inner">
-      <!-- Snoopy logo (left) -->
       <a class="brand-logo" href="./" aria-label="Home">
         <img src="Snoopy_Welcome.png" alt="Snoopy waving hi" />
       </a>
-  
-      <!-- Centered links (no pills) -->
-      <div class="nav-links nav-center">
+      <div class="nav-links">
         <a href="work.html">Projects</a>
         <a href="races.html">Races</a>
         <a href="bake.html">Bake</a>
