--- a/travel.html
+++ b/travel.html
@@ -163,15 +163,12 @@
 </head>
 <body>
 
-  <nav class="nav nav-simple">
+  <nav class="nav">
     <div class="container nav-inner">
-      <!-- Snoopy logo (left) -->
       <a class="brand-logo" href="./" aria-label="Home">
         <img src="Snoopy_Welcome.png" alt="Snoopy waving hi" />
       </a>
-  
-      <!-- Centered links (no pills) -->
-      <div class="nav-links nav-center">
+      <div class="nav-links">
         <a href="work.html">Projects</a>
         <a href="races.html">Races</a>
         <a href="bake.html">Bake</a>
@@ -180,7 +177,6 @@
       </div>
     </div>
   </nav>
-  
 
   <!-- background dashed route + ✈️ emoji following the path -->
   <svg class="scene" viewBox="0 0 1440 900" preserveAspectRatio="none" aria-hidden="true">
