--- a/work.html
+++ b/work.html
@@ -132,16 +132,12 @@
   </style>
 </head>
 <body>
-  <!-- Nav -->
-  <nav class="nav nav-simple">
+  <nav class="nav">
     <div class="container nav-inner">
-      <!-- Snoopy logo (left) -->
       <a class="brand-logo" href="./" aria-label="Home">
         <img src="Snoopy_Welcome.png" alt="Snoopy waving hi" />
       </a>
-  
-      <!-- Centered links (no pills) -->
-      <div class="nav-links nav-center">
+      <div class="nav-links">
         <a href="work.html">Projects</a>
         <a href="races.html">Races</a>
         <a href="bake.html">Bake</a>
@@ -150,6 +146,7 @@
       </div>
     </div>
   </nav>
+  
   
 
   <main class="page">
