--- a/travel.html
+++ b/travel.html
@@ -27,6 +27,10 @@
     min-height:100dvh; overflow-x:hidden;
   }
   .container{max-width:1120px;margin:0 auto;padding:20px 20px 100px}
+  /* Make Travel navbar match Home */
+.nav .container { padding: 0 20px; }     /* cancel page padding inside the nav only */
+.nav .brand-logo img { height: 28px; }   /* same logo height as Home */
+
 
 
 .brand{font-weight:800;letter-spacing:.08em}
