--- a/travel.html
+++ b/travel.html
@@ -28,8 +28,11 @@
   }
   .container{max-width:1120px;margin:0 auto;padding:20px 20px 100px}
   /* Make Travel navbar match Home */
-.nav .container { padding: 0 20px; }     /* cancel page padding inside the nav only */
-.nav .brand-logo img { height: 28px; }   /* same logo height as Home */
+/* Travel navbar match */
+.nav .container { padding: 0 20px; }   /* keep only horizontal padding */
+.nav-inner { padding: 14px 0; }        /* give the bar the same height */
+.nav .brand-logo img { height: 28px; } /* same logo size as Home */
+
 
 
 
