--- a/travel.html
+++ b/travel.html
@@ -27,11 +27,10 @@
     min-height:100dvh; overflow-x:hidden;
   }
   .container{max-width:1120px;margin:0 auto;padding:20px 20px 100px}
-  /* Make Travel navbar match Home */
-/* Travel navbar match */
-.nav .container { padding: 0 20px; }   /* keep only horizontal padding */
-.nav-inner { padding: 14px 0; }        /* give the bar the same height */
-.nav .brand-logo img { height: 28px; } /* same logo size as Home */
+/* Travel navbar match (same element has both classes) */
+.nav .container { padding: 14px 20px; }  /* set the vertical height here */
+.nav .brand-logo img { height: 28px; }   /* keep logo size consistent */
+
 
 
 
