--- a/travel.html
+++ b/travel.html
@@ -6,7 +6,6 @@
 <title>Travel – Jan Arroyo</title>
 <link href="styles.css" rel="stylesheet" />
 
-
 <style>
   :root{
     --bg-cream:#fff7ed;
@@ -27,29 +26,25 @@
     min-height:100dvh; overflow-x:hidden;
   }
   .container{max-width:1120px;margin:0 auto;padding:20px 20px 100px}
-/* Travel navbar match (same element has both classes) */
-.nav .container { padding: 14px 20px; }  /* set the vertical height here */
-.nav .brand-logo img { height: 28px; }   /* keep logo size consistent */
 
+  /* Travel navbar match (same element has both classes) */
+  .nav .container { padding: 14px 20px; }  /* set the vertical height here */
+  .nav .brand-logo img { height: 28px; }   /* keep logo size consistent */
 
+  .brand{font-weight:800;letter-spacing:.08em}
+  .brand a{text-decoration:none;color:var(--ink)}
 
+  .pill{padding:8px 14px;border-radius:999px;background:#f3f4f6;text-decoration:none;color:#0f172a;font-weight:600;
+    box-shadow:inset 0 0 0 1px rgba(17,24,39,.08)}
+  .pill.active{background:#111827;color:#fff}
 
-
-.brand{font-weight:800;letter-spacing:.08em}
-.brand a{text-decoration:none;color:var(--ink)}
-
-.pill{padding:8px 14px;border-radius:999px;background:#f3f4f6;text-decoration:none;color:#0f172a;font-weight:600;
-  box-shadow:inset 0 0 0 1px rgba(17,24,39,.08)}
-.pill.active{background:#111827;color:#fff}
-
-
-  /* ---------- Decorative route + plane emoji ---------- */
+  /* ---------- Decorative route + plane (background) ---------- */
   .scene{position:fixed;inset:0;z-index:0;pointer-events:none;opacity:.9}
   .route-dash{stroke:rgba(17,24,39,.22);stroke-width:1.6;stroke-dasharray:7 9;fill:none}
 
   /* ---------- BOARDING PASS header ---------- */
   .ticket{
-    margin:18px 0 12px;
+    margin:18px 0 6px; /* tighter gap above “Next up” */
     border-radius:26px;
     overflow:hidden;
     box-shadow:var(--shadow);
@@ -79,15 +74,8 @@
     grid-column:1/-1;margin-top:10px;border:1px dashed rgba(17,24,39,.18);
     border-radius:14px;height:110px;display:grid;place-items:center;background:#fff;position:relative;
   }
-  .map svg{width:92%;height:auto;opacity:.25}
-  .route{
-    position:absolute;left:50%;top:52%;transform:translate(-50%,-50%);
-    width:58%;height:1.5px;background:
-      repeating-linear-gradient(90deg,#111827 0 8px,#0000 8px 14px);opacity:.45;border-radius:2px;
-  }
-  /* the little ✈️ on the boarding pass */
-  .plane{position:absolute;top:calc(52% - 16px);left:18%;font-size:24px;line-height:1;animation:fly 10s linear infinite}
-  @keyframes fly{0%{left:18%}100%{left:78%}}
+  .map svg{width:92%;height:auto}
+  .ticket-route{fill:none;stroke:#111827;stroke-width:1.5;stroke-linecap:round;stroke-dasharray:6 8;opacity:.45}
 
   .col-right{padding:18px;background:#fff;display:grid;grid-template-columns:1fr 1fr;gap:12px}
   .label{font-size:12px;color:var(--muted);letter-spacing:.08em}
@@ -97,16 +85,16 @@
 
   /* ---------- NEXT UP ---------- */
   .next{
-    margin:10px 0 18px;
+    margin:8px 0 14px; /* slightly tighter */
     border-radius:18px;border:1px solid var(--line);background:var(--paper);box-shadow:var(--shadow);
     overflow:hidden;
   }
-  .next h3{margin:0;padding:12px 14px;background:linear-gradient(180deg,#fff,#fff7ef);border-bottom:1px solid var(--line)}
+  .next h3{margin:0;padding:8px 14px; /* tighter header */ background:linear-gradient(180deg,#fff,#fff7ef);border-bottom:1px solid var(--line)}
   .next-list{display:grid;grid-template-columns:repeat(2,minmax(0,1fr));gap:0}
   @media (max-width:780px){.next-list{grid-template-columns:1fr}}
-  .next-item{display:grid;grid-template-columns:auto 1fr auto;align-items:center;gap:12px;padding:12px 14px;border-top:1px solid var(--line)}
+  .next-item{display:grid;grid-template-columns:auto 1fr auto;align-items:center;gap:12px;padding:8px 14px; /* tighter rows */ border-top:1px solid var(--line)}
   .flag{width:46px;height:28px;border-radius:6px;border:1px solid rgba(17,24,39,.18);overflow:hidden;background:#fff;box-shadow:0 6px 16px rgba(17,24,39,.08)}
-  .flag svg{width:100%;height:100%;display:block}
+  .flag img{width:100%;height:100%;object-fit:cover;display:block}
   .next-title{font-weight:800;margin:0}
   .next-sub{margin:2px 0 0;color:var(--muted);font-size:13px}
   .badge{justify-self:end;background:#ecfdf5;border:1px solid #a7f3d0;color:#065f46;border-radius:999px;font-weight:800;
@@ -182,17 +170,18 @@
     </div>
   </nav>
 
-  <!-- background dashed route + ✈️ emoji following the path -->
+  <!-- background dashed route + plane that rotates with the path -->
   <svg class="scene" viewBox="0 0 1440 900" preserveAspectRatio="none" aria-hidden="true">
     <path id="routeBG" class="route-dash" d="M80,650 C420,520 760,300 1360,360">
       <animate attributeName="stroke-dashoffset" from="0" to="-220" dur="12s" repeatCount="indefinite"/>
     </path>
-    <!-- small emoji plane (auto-rotates along the path to avoid looking crooked) -->
-    <text font-size="26" text-anchor="middle" dominant-baseline="middle">✈️
-      <animateMotion dur="18s" repeatCount="indefinite" rotate="auto">
+    <g>
+      <!-- tiny plane icon that rotates along the path -->
+      <path d="M-8,-3 L8,0 L-8,3 L-2,0 Z" fill="#111827"/>
+      <animateMotion dur="16s" repeatCount="indefinite" rotate="auto">
         <mpath href="#routeBG"/>
       </animateMotion>
-    </text>
+    </g>
   </svg>
 
   <main class="container">
@@ -214,15 +203,20 @@
           </div>
 
           <div class="map" aria-hidden="true">
-            <!-- minimal world silhouette -->
+            <!-- minimal world silhouette + route with rotating plane -->
             <svg viewBox="0 0 800 400" fill="currentColor">
-              <path d="M88 183c13-23 44-45 63-43 10 1 15 13 28 16 15 4 39-12 50-6 16 9-3 39 7 47 11 8 41-17 53-8 16 12-1 56 15 64 23 11 49-54 72-49 12 2 19 28 32 29 12 1 27-22 39-19 14 3 14 33 28 36 15 2 33-31 47-29 19 3 27 55 47 55 21 0 44-60 62-62 19-2 28 55 47 57 13 2 28-20 40-16 9 3 21 26 21 26l-5 55H58l-9-79s13-31 39-44z" opacity=".35"/>
+              <path d="M88 183c13-23 44-45 63-43 10 1 15 13 28 16 15 4 39-12 50-6 16 9-3 39 7 47 11 8 41-17 53-8 16 12-1 56 15 64 23 11 49-54 72-49 12 2 19 28 32 29 12 1 27-22 39-19 14 3 14 33 28 36 15 2 33-31 47-29 19 3 27 55 47 55 21 0 44-60 62-62 19-2 28 55 47 57 13 2 28-20 40-16 9 3 21 26 21 26l-5 55H58l-9-79s13-31 39-44z" opacity=".28"/>
+              <!-- dashed route across the card -->
+              <path id="ticketRoute" class="ticket-route" d="M140,210 C260,180 380,160 520,180  " />
+              <!-- small plane that follows the dashed route -->
+              <g>
+                <path d="M-7,-3 L7,0 L-7,3 L-2,0 Z" fill="#111827"/>
+                <animateMotion dur="10s" repeatCount="indefinite" rotate="auto">
+                  <mpath href="#ticketRoute"/>
+                </animateMotion>
+              </g>
             </svg>
           </div>
-
-          <div class="route"></div>
-          <!-- tiny emoji plane on the boarding pass map -->
-          <div class="plane" aria-hidden="true">✈️</div>
         </div>
 
         <div class="perforation" aria-hidden="true"></div>
@@ -255,18 +249,8 @@
       <div class="next-list">
         <div class="next-item">
           <div class="flag" aria-hidden="true">
-            <!-- Mexico flag -->
-            <svg viewBox="0 0 3 2" xmlns="http://www.w3.org/2000/svg">
-              <rect width="1" height="2" x="0" y="0" fill="#006847"/>
-              <rect width="1" height="2" x="1" y="0" fill="#ffffff"/>
-              <rect width="1" height="2" x="2" y="0" fill="#ce1126"/>
-              <g transform="translate(1.5,1) scale(.18)">
-                <circle r="2.6" fill="#fff"/>
-                <path d="M0-2.2c.9.2 1.2 1 .6 1.7-.4.5-1 .8-1.6.9.4.3.8.6 1 .9" fill="#8b5e3c" />
-                <path d="M-2.2.2c.6.6 1.3 1 2.2 1 .9 0 1.6-.4 2.2-1" stroke="#0b6" stroke-width=".5" fill="none"/>
-                <circle r=".6" fill="#b91c1c"/>
-              </g>
-            </svg>
+            <!-- Accurate Mexico flag -->
+            <img src="https://flagcdn.com/w40/mx.png" alt="">
           </div>
           <div>
             <p class="next-title">Mexico City</p>
@@ -277,38 +261,8 @@
 
         <div class="next-item">
           <div class="flag" aria-hidden="true">
-            <!-- South Korea flag -->
-            <svg viewBox="0 0 3 2" xmlns="http://www.w3.org/2000/svg">
-              <rect width="3" height="2" fill="#ffffff"/>
-              <g transform="translate(1.5,1)">
-                <path d="M0,-.55a.55.55 0 1 1 0,1.1a.28.28 0 0 0 0 -.55z" fill="#2563eb"/>
-                <path d="M0,.55a.55.55 0 1 1 0,-1.1a.28.28 0 0 1 0 .55z" fill="#e11d48"/>
-              </g>
-              <g stroke="#111827" stroke-width=".12">
-                <g transform="translate(.45,.35) rotate(-30)">
-                  <line x1="-.36" y1="-.20" x2=".36" y2="-.20"/>
-                  <line x1="-.36" y1="0" x2=".36" y2="0"/>
-                  <line x1="-.36" y1=".20" x2=".36" y2=".20"/>
-                </g>
-                <g transform="translate(2.55,1.65) rotate(-30)">
-                  <line x1="-.36" y1="-.20" x2=".36" y2="-.20"/>
-                  <line x1="-.36" y1="0" x2="-.05" y2="0"/>
-                  <line x1=".05"  y1="0" x2=".36" y2="0"/>
-                  <line x1="-.36" y1=".20" x2=".36" y2=".20"/>
-                </g>
-                <g transform="translate(.45,1.65) rotate(30)">
-                  <line x1="-.36" y1="-.20" x2=".36" y2="-.20"/>
-                  <line x1="-.36" y1="0" x2="-.05" y2="0"/>
-                  <line x1=".05"  y1="0" x2=".36" y2="0"/>
-                  <line x1="-.36" y1=".20" x2=".36" y2=".20"/>
-                </g>
-                <g transform="translate(2.55,.35) rotate(30)">
-                  <line x1="-.36" y1="-.20" x2=".36" y2="-.20"/>
-                  <line x1="-.36" y1="0" x2=".36" y2="0"/>
-                  <line x1="-.36" y1=".20" x2=".36" y2=".20"/>
-                </g>
-              </g>
-            </svg>
+            <!-- Accurate South Korea flag -->
+            <img src="https://flagcdn.com/w40/kr.png" alt="">
           </div>
           <div>
             <p class="next-title">Seoul, Korea</p>
@@ -508,6 +462,3 @@
 </script>
 </body>
 </html>
-
-
-
